# paavo

./: .gitignore  AGENTS.md  Cargo.toml  README.md  justfile  manual-smoke.nu  sample-paavo.toml  setup-paavo.sh
.github/workflows/: README.md  ci.yml
contrib/: 99-probes.rules  README.md  paavo-web.service  paavo.toml.example  paavod.service
crates/paavo-build/: Cargo.toml
crates/paavo-build/src/: build.rs  elf.rs  error.rs  lib.rs  tar.rs
crates/paavo-build/tests/: build_invocation.rs  elf_discovery.rs  tar_unpack.rs
crates/paavo-cli/: Cargo.toml
crates/paavo-cli/src/: cli.rs  client.rs  cmd_admin.rs  cmd_boards.rs  cmd_jobs.rs  cmd_new.rs  cmd_run.rs  config.rs  main.rs
crates/paavo-cli/tests/: board_add_accepts_list_line.rs  board_add_selector.rs  cli_admin_purge.rs  cli_help.rs  cli_jobs_against_paavod.rs  cli_new.rs  cli_run_board_resolution.rs  templates_mcxa266_smoke.rs
crates/paavo-core/: Cargo.toml
crates/paavo-core/src/: build_cache.rs  cancel.rs  enqueue.rs  error.rs  lib.rs  quarantine.rs  runner.rs  scheduler.rs  selector.rs
crates/paavo-core/tests/: build_cache.rs  cancel.rs  enqueue.rs  quarantine.rs  scheduler_lru.rs  scheduler_priority.rs  scheduler_starvation.rs  scheduler_two_stage.rs
crates/paavo-core/tests/common/: mod.rs
crates/paavo-db/: Cargo.toml
crates/paavo-db/migrations/: V1__initial.sql  V2__cargo_update_packages.sql  V3__skip_cache.sql  V4__awaiting_board.sql
crates/paavo-db/src/: board.rs  build_cache.rs  db.rs  error.rs  job.rs  lib.rs  like.rs  log.rs  schedule.rs
crates/paavo-db/tests/: board_ops.rs  build_cache_ops.rs  job_ops.rs  log_ops.rs  migration_v4.rs  migrations.rs  schedule_ops.rs
crates/paavo-meta/: Cargo.toml  build.rs  paavo.x  teleprobe.x
crates/paavo-meta/src/: lib.rs
crates/paavo-meta/tests/: macro_expansion.rs
crates/paavo-probe/: Cargo.toml
crates/paavo-probe/src/: error.rs  event.rs  lib.rs  sections.rs  session.rs
crates/paavo-probe/tests/: real_session_connect.rs  real_session_drive.rs  real_session_ram_boot.rs  sections.rs
crates/paavo-proto/: Cargo.toml
crates/paavo-proto/src/: board.rs  ids.rs  job.rs  lib.rs  log.rs  page.rs  schedule.rs  stats.rs  stream.rs
crates/paavo-proto/tests/: board_view.rs  serde_roundtrip.rs  wire_compat.rs
crates/paavo-runner/: Cargo.toml
crates/paavo-runner/src/: job.rs  lib.rs  watchdog.rs  worker.rs
crates/paavo-runner/tests/: cancel_path.rs  hard_max_watchdog.rs  inactivity_watchdog.rs  pass_path.rs
crates/paavo-runner/tests/common/: mod.rs
crates/paavo-web/: Cargo.toml  README.md
crates/paavo-web-ui/: .gitignore  Cargo.toml  index.html  style.css
crates/paavo-web-ui/.cargo/: config.toml
crates/paavo-web-ui/src/: api.rs  app.rs  lib.rs  live.rs  main.rs  per_page.rs  theme.rs
crates/paavo-web-ui/src/components/: boards.rs  dashboard.rs  job_detail.rs  jobs_list.rs  mod.rs  schedule.rs  shell.rs  widgets.rs
crates/paavo-web/src/: app.rs  config.rs  db.rs  embed.rs  feed.rs  index.rs  lib.rs  main.rs  proxy.rs  time.rs
crates/paavo-web/src/api/: boards.rs  dashboard.rs  events.rs  jobs.rs  mod.rs  schedules.rs
crates/paavo-web/src/assets/: dashboard-live.js  live-log.js  style.css
crates/paavo-web/src/pages/: boards.rs  dashboard.rs  job_detail.rs  jobs_list.rs  mod.rs  schedule.rs
crates/paavo-web/tests/: api_dashboard.rs  api_events.rs  api_jobs.rs  feed.rs  proxy.rs  smoke.rs
crates/paavod/: Cargo.toml
crates/paavod/src/: app.rs  app_state.rs  builder.rs  cancellation.rs  config.rs  cron.rs  dispatch.rs  job_logs.rs  lib.rs  log_sink.rs  main.rs  real_runner.rs  shutdown.rs  state_dir.rs
crates/paavod/src/routes/: admin.rs  boards.rs  health.rs  jobs.rs  mod.rs
crates/paavod/tests/: api_admin.rs  api_boards.rs  api_health.rs  api_jobs.rs  cancellation.rs  config_loading.rs  cron_enqueue.rs  dispatch_loop.rs  job_logs.rs  real_runner_end_to_end.rs  real_runner_skeleton.rs  shutdown_flow.rs
dev/probe-rs-spike/: Cargo.toml  FINDINGS.md
dev/probe-rs-spike/src/: main.rs
dev/seed-demo/: Cargo.toml
dev/seed-demo/src/: main.rs
dev/spike-fixture-mcxa266/: Cargo.toml  build.rs  link_ram_cortex_m.x  memory.x
dev/spike-fixture-mcxa266/.cargo/: config.toml
dev/spike-fixture-mcxa266/src/: main.rs
docs/: deployment.md  hw-smoke-checklist.md
docs/superpowers/plans/: 2026-06-09-paavo-implementation.md  2026-06-15-c2-persist-log-frames.md  2026-06-16-c2-log-frame-persistence.md  2026-06-16-paavo-web-leptos-spa.md  2026-06-16-paavo-web-live-dashboard.md  2026-06-16-parallel-build-pool.md  2026-06-16-startup-job-reconciliation.md  2026-06-17-cli-board-kind-resolution.md  2026-06-17-dashboard-sql-aggregates.md  2026-06-17-db-side-fuzzy-search.md  2026-06-17-navbar-hamburger.md  2026-06-17-purge-all-boards.md  2026-06-17-rows-per-page-selector.md  2026-06-29-cli-new-remote-templates.md  2026-06-29-probe-selector-parsing.md
docs/superpowers/specs/: 2026-06-09-paavo-test-runner-design.md  2026-06-16-c2-log-frame-persistence-design.md  2026-06-16-paavo-web-leptos-spa-design.md  2026-06-16-paavo-web-live-dashboard-design.md  2026-06-16-parallel-build-pool-design.md  2026-06-16-startup-job-reconciliation-design.md  2026-06-17-cli-board-kind-resolution-design.md  2026-06-17-dashboard-sql-aggregates-design.md  2026-06-17-db-side-fuzzy-search-design.md  2026-06-17-navbar-hamburger-design.md  2026-06-17-purge-all-boards-design.md  2026-06-17-rows-per-page-selector-design.md  2026-06-29-cli-new-remote-templates-design.md  2026-06-29-probe-selector-parsing-design.md
soak-tests/mcxa266/dma-stress-overnight/: Cargo.toml  memory.x
soak-tests/mcxa266/dma-stress-overnight/.cargo/: config.toml
soak-tests/mcxa266/dma-stress-overnight/src/: main.rs
templates/mcxa266/: Cargo.toml.liquid  README.md  build.rs  cargo-generate.toml  memory.x
templates/mcxa266/.cargo/: config.toml
templates/rt685-evk/: Cargo.toml.liquid  cargo-generate.toml  memory.x
templates/shared/: README.md
tests/fixtures/smoke-crate/: Cargo.toml  memory.x
tests/fixtures/smoke-crate/.cargo/: config.toml
tests/fixtures/smoke-crate/src/: main.rs
(+2 files in other folders)
