[package]
name = "paavo-build"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Untar, cargo build, and ELF discovery for paavo test crates."

[dependencies]
tar = { workspace = true }
blake3 = { workspace = true }
walkdir = { workspace = true }
thiserror = { workspace = true }
hex = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
