[package]
name = "paavo-probe"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Low-level probe-rs + defmt-decoder driver for paavo."

[dependencies]
paavo-proto    = { workspace = true }
probe-rs       = { workspace = true }
defmt-decoder  = { workspace = true }
defmt-parser   = { workspace = true }
object         = { workspace = true }
thiserror      = { workspace = true }
tracing        = { workspace = true }
parking_lot    = { workspace = true }
crossbeam-channel = { workspace = true }
chrono         = { workspace = true }

[dev-dependencies]
# `object`'s ELF *writer* lives behind the non-default `write` feature.
# The runtime dep only needs the default `read` surface.
object = { workspace = true, features = ["write"] }
# Capture tracing events from `RealSession::connect` in the
# `real_session_ram_boot` hardware test (asserts the post-M7.7
# RAM-resident boot path is taken with the right vector_table_addr).
tracing-subscriber = { workspace = true }
