[package]
name = "paavo-proto"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Wire types and protocol definitions shared across the paavo workspace."

[dependencies]
serde = { workspace = true }
ulid = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
