[package]
name = "paavo-runner"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Watchdog + paavo-probe driver for one in-flight paavo job."

[dependencies]
paavo-proto = { workspace = true }
paavo-probe = { workspace = true }
parking_lot = { workspace = true }
crossbeam-channel = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
