[package]
name = "paavo-web"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "paavo read-only web viewer."
# `rust-version.workspace = true` intentionally omitted — the workspace
# root does not define a workspace-level `rust-version`, so the inherit
# would fail. Same as paavod and paavo-cli.

[lib]
name = "paavo_web"
path = "src/lib.rs"

[[bin]]
name = "paavo-web"
path = "src/main.rs"

[dependencies]
paavo-proto = { workspace = true }
paavo-db    = { workspace = true }
axum        = { workspace = true }
tokio       = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
toml        = { workspace = true }
clap        = { workspace = true }
anyhow      = { workspace = true }
tracing     = { workspace = true }
tracing-subscriber = { workspace = true }
parking_lot = { workspace = true }
# Human-readable timestamps. paavod and every other crate already
# pin chrono via the workspace; paavo-web pulls the same `0.4 +
# serde` pin in. Used by `crate::time` for the `epoch_ms_to_local`,
# `relative_us`, and `relative_to_now` helpers that the pages render
# in place of raw `i64.to_string()`.
chrono      = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
tower    = { workspace = true }
