[package]
name = "paavod"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "paavo daemon: HTTP server, scheduler, board fleet owner."

[dependencies]
paavo-proto = { workspace = true }
paavo-db    = { workspace = true }
paavo-core  = { workspace = true }
axum        = { workspace = true }
tokio       = { workspace = true }
tower       = { workspace = true }
tower-http  = { workspace = true }
tokio-cron-scheduler = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
toml        = { workspace = true }
clap        = { workspace = true }
anyhow      = { workspace = true }
thiserror   = { workspace = true }
tracing     = { workspace = true }
tracing-subscriber = { workspace = true }
chrono      = { workspace = true }
futures     = { workspace = true }
bytes       = { workspace = true }

[dev-dependencies]
reqwest    = { workspace = true }
tempfile   = { workspace = true }
