[package]
name = "paavod"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "paavo daemon: HTTP server, scheduler, board fleet owner."

[lib]
name = "paavod"
path = "src/lib.rs"

[[bin]]
name = "paavod"
path = "src/main.rs"

[dependencies]
paavo-proto = { workspace = true }
paavo-db    = { workspace = true }
paavo-core  = { workspace = true }
paavo-build = { workspace = true }
paavo-runner = { workspace = true }
paavo-probe = { workspace = true }
crossbeam-channel = { workspace = true }
axum        = { workspace = true }
tokio       = { workspace = true }
tower       = { workspace = true }
tower-http  = { workspace = true }
tokio-cron-scheduler = { workspace = true }
cron        = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
toml        = { workspace = true }
clap        = { workspace = true }
anyhow      = { workspace = true }
thiserror   = { workspace = true }
tracing     = { workspace = true }
tracing-subscriber = { workspace = true }
chrono      = { workspace = true }
futures     = { workspace = true }
async-stream = { workspace = true }
tokio-stream = { workspace = true }
bytes       = { workspace = true }
parking_lot = { workspace = true }
blake3      = { workspace = true }
walkdir     = { workspace = true }
tar         = { workspace = true }

[dev-dependencies]
reqwest    = { workspace = true }
tempfile   = { workspace = true }
rusqlite   = { workspace = true }
