[package]
name = "seed-demo"
version = "0.1.0"
edition = "2021"
publish = false

# Empty `[workspace]` table makes this crate its OWN workspace root. Required
# because it's excluded from the paavo workspace AND lives nested inside the
# repo tree: without this, `cargo` walking up from this manifest skips past the
# (excluding) paavo workspace and lands on a parent `Cargo.toml` — e.g. a git
# worktree checked out under the main repo dir — which errors with "current
# package believes it's in a workspace when it's not". Standing on our own root
# stops that walk. (The older dev/ spike crates predate this gotcha.)
[workspace]

# Standalone — NOT a workspace member. Excluded by `workspace.exclude` in the
# root Cargo.toml. This dev binary floods a local paavo SQLite database with a
# fake board fleet and a realistic spread of jobs so the paavo-web SPA can be
# stress-tested (pagination, fuzzy search, every state badge, live inserts)
# with no hardware and no running daemon. It links `paavo-db` directly and
# writes through the same typed helpers paavod uses.

[dependencies]
paavo-db = { path = "../../crates/paavo-db" }
paavo-proto = { path = "../../crates/paavo-proto" }
clap = { version = "4", features = ["derive"] }
rand = "0.8"
anyhow = "1"

[[bin]]
name = "seed-demo"
path = "src/main.rs"
