[package]
name = "dma-stress-overnight"
version = "0.1.0"
edition = "2021"

# Standalone — no workspace inheritance. Listed in the repo root
# `[workspace.exclude]` so `cargo build --workspace` on the host
# doesn't try to cross-compile this crate. The empty `[workspace]`
# table also forces cargo to treat this crate as standalone even
# when it lives inside paavo's repo (otherwise cargo walks up to
# D:\workspace\paavo\Cargo.toml and refuses the build).
[workspace]

[dependencies]
cortex-m       = { version = "0.7", features = ["critical-section-single-core"] }
cortex-m-rt    = "0.7"
defmt          = "0.3"
defmt-rtt      = "0.4"
panic-probe    = { version = "0.3", features = ["print-defmt"] }
embassy-executor = { git = "https://github.com/embassy-rs/embassy", rev = "main", features = ["arch-cortex-m", "executor-thread", "defmt"] }
embassy-time     = { git = "https://github.com/embassy-rs/embassy", rev = "main", features = ["defmt", "defmt-timestamp-uptime"] }
embassy-mcxa     = { git = "https://github.com/embassy-rs/embassy", rev = "main", features = ["mcxa266vfl", "defmt", "time-driver-any"] }
paavo-meta       = { git = "https://github.com/felipebalbi/paavo" }
